--- a/css/forms.css
+++ b/css/forms.css
@@ -1,4 +1,7 @@
 @charset "utf-8";
+ul.form-with-validation {
+	padding: 0;
+}
 ul.form-with-validation li {
 	position: relative;
 	margin: 0 0 10px;
