--- a/css/fonts.css
+++ b/css/fonts.css
@@ -16,3 +16,45 @@
 	font-style: normal;
 }
 
+/*  fonts from the style guide*/
+.heading-font{
+	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
+	font-size: 22px;
+	text-transform: uppercase;
+	font-color: #444444;
+}
+.title-font{
+	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	text-transform: standard;
+	font-color: #444444;
+}
+.body-font-12{
+	font-family: Helvetica;
+	font-size: 12px;
+	text-transform: standard;
+	font-color: #444444;
+	font-weight: regular;
+}
+.body-font-16{
+	font-family: Helvetica;
+	font-size: 16px;
+	text-transform: standard;
+	font-color: #444444;
+	font-weight: regular;
+}
+.body-font-16-teal{
+	font-family: Helvetica;
+	font-size: 16px;
+	text-transform: standard;
+	font-color: #00929e;
+	font-weight: regular;
+}
+.body-font-12-teal{
+	font-family: Helvetica;
+	font-size: 12px;
+	text-transform: standard;
+	font-color: #00929e;
+	font-weight: regular;
+}
+
