--- a/css/nav.css
+++ b/css/nav.css
@@ -48,7 +48,7 @@ header .primary-nav-contents ul li {
 header .primary-nav-contents ul li a {
 	padding: 30px 30px 2px;
 	height: 45px;
-	color:#444444;
+	color:#7A7A7A;
 	display:block;
 	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
 
