--- a/css/accordion.css
+++ b/css/accordion.css
@@ -9,6 +9,8 @@
 	height: 33px;
 	padding: 20px 0 5px 50px;
 	margin: 0;
+	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
+	
 	border: 0;
 	color: #999999;
 	transition: color 0.25s;
