--- a/css/global.css
+++ b/css/global.css
@@ -335,6 +335,9 @@ h4 {
 .large-titled-box {
 	background-color:#FFFFFF;
 }
+.large-titled-box .body {
+	margin:0 25px;
+}
 .request-summary .request-title,
 .large-titled-box .box-title {
 	height: 33px;
