--- a/css/nav.css
+++ b/css/nav.css
@@ -24,7 +24,7 @@ header .secondary-nav-contents {
 	margin: 0 auto;
 	position: relative;
 }
-.signin header .primary-nav-contents {
+.medium-width header .primary-nav-contents {
 	text-align:center;
 }
 header .secondary-nav-contents,
