--- a/css/forms.css
+++ b/css/forms.css
@@ -137,7 +137,8 @@ input.autoclear {
 /*styles used for registration and login pages.*/
 .form-note{font-style:italic; font-size:10px;}
 .form-note-alert{font-style:italic; font-size:10px; color: #FF0000;}
-.backtosignin{float:left; padding-top:5px;}
+.back-to-sign-in{float:left; position: relative; height:20px; width:120px;}
+.back-to-sign-in .sign-in-text {position:absolute; bottom:0px; padding-left:5px;}
 
 .form-entry{
 	width:550px;
