--- a/css/global.css
+++ b/css/global.css
@@ -346,7 +346,7 @@ h4 {
 	background-color:#FFFFFF;
 }
 .padded {
-	margin:0 25px;
+	margin: 10px 25px;
 }
 .squared-box div.accordion-body {
 	margin: 0;
