--- a/css/global.css
+++ b/css/global.css
@@ -538,6 +538,10 @@ h3.discreet {
 	font-size: 18px;
 }
 
+/**
+ * Page specific to make-onetime-payment.html
+ */
+
 
 /*	~~~~~~~~~~~ TH Tim's Modifications ~~~~~~~~~~~~~~~~~~~~~~~~	*/
 .clear-both{clear:both;}
