--- a/css/forms.css
+++ b/css/forms.css
@@ -63,12 +63,14 @@ ul.form-with-validation .message-text {
 }
 
 /* Inputs */
+.select-wrapper label {
+	width: 100%;
+}
 .select-wrapper label,
 input[type=text],
 input[type=password],
 input[type=email] {
 	box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.25) inset;
-	width: 100%;
 	border-radius: 2px;
 	border: 1px solid #B9BCBE;
 	padding-left: 5px;
