--- a/css/forms.css
+++ b/css/forms.css
@@ -153,6 +153,11 @@ input.autoclear {
 .back-to-sign-in{float:left; position: relative; height:20px; width:120px;}
 .back-to-sign-in .sign-in-text {position:absolute; bottom:0px; padding-left:5px;}
 
+.back-arrow {
+	background:url(../images/icon_back_arrow_teal.png) no-repeat left center;
+	padding-left: 12px;
+}
+
 .form-entry{
 	width:550px;
 }
