--- a/css/forms.css
+++ b/css/forms.css
@@ -2,6 +2,10 @@
 ul.form-with-validation {
 	padding: 0;
 }
+ul.form-with-validation label {
+	font-size: 14px;
+	color:#444;
+}
 ul.form-with-validation li {
 	position: relative;
 	margin: 0 0 10px;
