--- a/css/global.css
+++ b/css/global.css
@@ -349,6 +349,10 @@ h4 {
 .titled-box .body-right {
 	float:left;
 }
+.titled-box h3 {
+	font-size: 16px;
+	color: #444444;
+}
 /* Squared-corners/no drop-shadow */
 .squared-box {
 	background-color:#FFFFFF;
