--- a/css/global.css
+++ b/css/global.css
@@ -70,6 +70,11 @@ fieldset.no-border {
 	display:block;
 	padding-left: 25px;
 }
+a.small-teal {
+	font-size: 11px;
+	font-family: Arial, sans-serif;
+	color: #00919E;
+}
 #main {
 	width: 770px;
 	margin: 0 auto;
@@ -314,13 +319,18 @@ h4 {
 	position: absolute;
 	top: 0;
 }
-.titled-box .box-title a {
+.squared-box .box-title .title-area-right {
+	padding: 10px 34px 0 0;
+}
+.titled-box .box-title .title-area-right {
+	padding: 20px 15px 0 0;
+}
+.squared-box .box-title .title-area-right,
+.titled-box .box-title .title-area-right {
 	font-size: 12px;
 	color: #666666; /* TM 7/4 :psd's show 666*/
 	font-weight: regular;
-}
-.titled-box .box-title a.right {
-	padding: 20px 15px 0 0;
+	float:right;
 }
 .titled-box .box-footer {
 	position: absolute;
@@ -405,6 +415,15 @@ h4 {
 	border-bottom: 2px solid #E7E5E3;
 	padding-bottom: 20px;
 /*	margin-bottom: 20px;*/
+}
+
+
+.back-arrow {
+	background:url(../images/icon_back_arrow_teal.png) no-repeat left center;
+	padding-left: 12px;
+}
+.back-arrow  a{
+	font-size: 14px;
 }
 /**
  * Photo Box
