--- a/css/forms.css
+++ b/css/forms.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
-ul.form-with-validation {
+ul.form-with-validation,
+ul.form-with-validation ul {
 	padding: 0;
 }
 ul.form-with-validation label {
@@ -23,7 +24,7 @@ ul.form-with-validation input[type=password] {
 }
 ul.form-with-validation .select-wrapper {
 	vertical-align: top;
-	margin: 0 10px 0 4px;
+	margin: 0 10px 0 0;
 }
 ul.form-with-validation li.address input.street {
 	margin-bottom: 10px;
@@ -36,6 +37,7 @@ ul.form-with-validation li.address input.zip {
 }
 
 ul.form-with-validation .select-wrapper label {
+	width: 690px;
 	padding-top: 9px;
 	padding-bottom:8px;
 }
@@ -66,9 +68,9 @@ ul.form-with-validation .message-text {
 
 .select-wrapper label {
 	color: #333;
-	padding: 4px 10px 5px 5px;
+	padding: 4px 30px 5px 5px;
+	margin: 0 -20px 0 0;
 	float: left;
-	margin: 0;
 	min-height:14px;
 	text-align: left;
 }
@@ -89,9 +91,6 @@ ul.form-with-validation .message-text {
 }
 
 /* Inputs */
-.select-wrapper label {
-	width: 100%;
-}
 .form-with-validation input[type=text],
 .form-with-validation input[type=password],
 .form-with-validation input[type=email] {
