--- a/css/ie.css
+++ b/css/ie.css
@@ -30,6 +30,13 @@ button.submit:active span {
 	right: -10px;
 }
 
-.switchable ul input, .switchable ul span, .switchable .select-wrapper {
-	display:none;
+.switchable ul input,
+.switchable ul span,
+.switchable .select-wrapper {
+	visibility:hidden;
+}
+.switchable-edit ul input,
+.switchable-edit ul span,
+.switchable-edit .select-wrapper {
+	visibility:visible;
 }
