--- a/css/nav.css
+++ b/css/nav.css
@@ -220,8 +220,8 @@ header .dropdown-nav-contents ul ul li:hover a {
  */
 footer {
 	width: 730px;
-	height: 31px;
-	margin: 0 auto;
+	height: 23px;
+	margin: 0 auto 18px auto;
 	display: block;
 	background: #000000;
 	background: rgba(0, 0, 0, 0.7);
@@ -232,7 +232,7 @@ footer .right a {
 	font-size: 14px;
 	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
 	display: block;
-	padding: 5px 0 0 25px;
+	padding: 1px 0 0 25px;
 }
 footer .right a.cta-dialog {
 	color: #FFFFFF;
